--- a/css/app.css
+++ b/css/app.css
@@ -1,8 +1,63 @@
+.radios, .hotlists {
+  margin: 14px 0px 10px 10px; }
+  .radios .title, .hotlists .title {
+    color: #000;
+    font-size: 16px;
+    margin-bottom: 11px; }
+  .radios .list, .hotlists .list {
+    display: flex;
+    flex-wrap: wrap; }
+    .radios .list .list-item, .hotlists .list .list-item {
+      flex: 1;
+      flex-basis: 40%;
+      font-size: 14px;
+      margin-right: 10px;
+      background-color: #fff;
+      margin-bottom: 10px;
+      position: relative; }
+      .radios .list .list-item .list-media, .hotlists .list .list-item .list-media {
+        position: relative; }
+      .radios .list .list-item .list-title, .hotlists .list .list-item .list-title {
+        margin-top: 7px;
+        height: 36px;
+        padding: 0 7px 5px;
+        overflow: hidden;
+        text-overflow: hidden; }
+      .radios .list .list-item .icon, .hotlists .list .list-item .icon {
+        background-repeat: no-repeat;
+        background-size: 24px 60px;
+        background-image: url("../images/icons.png"); }
+      .radios .list .list-item .icon-play, .hotlists .list .list-item .icon-play {
+        height: 24px;
+        bottom: 5px;
+        right: 5px;
+        width: 24px;
+        position: absolute;
+        background-position: 0 0; }
+      .radios .list .list-item img, .hotlists .list .list-item img {
+        display: block;
+        width: 100%; }
+
 * {
   box-sizing: border-box; }
 
 body {
   margin: 0; }
+
+ul, ol {
+  padding: 0;
+  list-style: none;
+  margin: 0; }
+
+h1, h2, h3 {
+  font-weight: normal;
+  margin: 0; }
+
+a {
+  text-decoration: none; }
+
+i {
+  font-style: normal; }
 
 #header {
   height: 44px;
@@ -14,6 +69,100 @@ body {
   #header #logo {
     height: 25px;
     margin-left: 10px; }
+
+.qq-slider {
+  width: 100%;
+  overflow: hidden; }
+  .qq-slider .qq-slider-wrap {
+    display: flex;
+    width: 500%;
+    transition: .3s; }
+  .qq-slider .qq-slider-item {
+    flex-basis: 100%; }
+    .qq-slider .qq-slider-item > a {
+      display: block; }
+      .qq-slider .qq-slider-item > a img {
+        width: 100%;
+        display: block; }
+
+.navbar .nav-list {
+  display: flex; }
+  .navbar .nav-list .nav-item {
+    cursor: pointer;
+    flex: 1;
+    text-align: center;
+    height: 40px;
+    color: rgba(0, 0, 0, 0.6);
+    line-height: 40px;
+    position: relative; }
+    .navbar .nav-list .nav-item.active {
+      color: #31c27c; }
+    .navbar .nav-list .nav-item.active::after {
+      position: absolute;
+      content: "";
+      display: block;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 2px;
+      background-color: #31c27c; }
+
+.hide {
+  display: none; }
+
+#rank-view {
+  margin: 10px; }
+
+.toplist {
+  margin-bottom: 50px; }
+  .toplist .top-item {
+    height: 100px;
+    background: #fff;
+    margin-bottom: 10px; }
+  .toplist .top-item-media {
+    float: left; }
+    .toplist .top-item-media img {
+      width: 100px;
+      height: 100px;
+      display: block; }
+  .toplist .top-item-info {
+    position: relative;
+    padding: 7px 10px 6px 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; }
+    .toplist .top-item-info::after {
+      content: '';
+      position: absolute;
+      right: 10px;
+      top: 50%;
+      margin-top: -4px;
+      width: 6px;
+      height: 6px;
+      transform: rotate(315deg);
+      border-right: 1px solid #b2b2b2;
+      border-bottom: 1px solid #b2b2b2; }
+  .toplist .top-item-title {
+    color: #000;
+    font-size: 16px;
+    font-weight: normal;
+    margin-bottom: 6px; }
+  .toplist .top-item-list {
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.5); }
+    .toplist .top-item-list .top-item-song {
+      height: 20px;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis; }
+    .toplist .top-item-list .song-index {
+      float: left;
+      min-width: 10px;
+      text-align: center; }
+    .toplist .top-item-list .song-name {
+      color: #000;
+      margin-left: 8px;
+      margin-right: 5px; }
 
 body {
   background: #f4f4f4; }
