--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -4,3 +4,18 @@
 body{
     margin: 0;
 }
+ul,ol{
+    padding: 0;
+    list-style: none;
+    margin: 0;
+}
+h1,h2,h3{
+    font-weight: normal;
+    margin: 0;
+}
+a{
+    text-decoration: none;
+}
+i{
+    font-style: normal;
+}
