--- a/scss/app.scss
+++ b/scss/app.scss
@@ -2,6 +2,10 @@
 @import "rec";
 @import "reset";
 @import "header";
+@import "slider";
+@import "navbar";
+@import "helper";
+@import "rank";
 body{
     background: $body-background;
 }
