--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar {
     .nav-list{
         display: flex;
+        background-color: #fff;
         .nav-item{
             cursor: pointer;
             flex:1;
