--- a/scss/_helper.scss
+++ b/scss/_helper.scss
@@ -1,3 +1,12 @@
 .hide{
     display: none;
 }
+.noscroll {
+    overflow: hidden;
+  }
+  
+  .ellipsis {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
